--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -85,6 +85,11 @@
                     "pattern": "",
                     "name": "worklist",
                     "target": "worklist"
+                },
+                {
+                    "pattern": "Post/{postId}",
+                    "name": "post",
+                    "target": "post"
                 }
             ],
             "targets": {
@@ -92,6 +97,11 @@
                     "name": "Worklist",
                     "id": "worklist",
                     "level": 1
+                },
+                "post": {
+                    "name": "Post",
+                    "id": "post",
+                    "level": 2
                 }
             }
         }
